fix: fix row-gap between circle rows

--- a/src/components/fibonacci-page/fibonacci-page.module.css
+++ b/src/components/fibonacci-page/fibonacci-page.module.css
@@ -1,21 +1,20 @@
 .container {
-    display: flex;
-    gap: 15px;
-    justify-content: center;
-    
+  display: flex;
+  gap: 15px;
+  justify-content: center;
 }
 
 .input {
-    width: 377px;
+  width: 377px;
 }
 
 .circles {
-    margin-top: 48px;
-    display: flex;
-    flex-direction: row;
-    gap: 16px;
-    justify-content: center;
-    max-width: 944px;
-    flex-wrap: wrap;
-
+  margin-top: 48px;
+  display: flex;
+  flex-direction: row;
+  column-gap: 16px;
+  row-gap: 48px;
+  justify-content: center;
+  max-width: 944px;
+  flex-wrap: wrap;
 }
